exports[`actions > getFeedsRoutesAndStops should work when fetching via getAllRoutesAndStops and then getUnfetchedRoutes 1`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > getFeedsRoutesAndStops should work when fetching via getAllRoutesAndStops and then getUnfetchedRoutes 2`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > getFeedsRoutesAndStops should work when fetching via getAllRoutesAndStops and then getUnfetchedRoutes 3`] = `
Object {
  "payload": Array [
    Object {
      "checksum": "abcd",
      "id": "1",
      "routes": Array [
        Object {
          "label": "1 ",
          "route_id": "1",
          "route_short_name": "1",
        },
      ],
      "routesById": Object {
        "1": Object {
          "label": "1 ",
          "route_id": "1",
          "route_short_name": "1",
        },
      },
      "stops": Array [
        Object {
          "stop_id": "1",
        },
      ],
      "stopsById": Object {
        "1": Object {
          "stop_id": "1",
        },
      },
    },
  ],
  "type": "set feeds",
}
`;

exports[`actions > getFeedsRoutesAndStops should work when fetching via getAllRoutesAndStops and then getUnfetchedRoutes 4`] = `
Object {
  "payload": Array [
    Object {
      "checksum": "abcd",
      "id": "1",
      "routes": Array [
        Object {
          "label": "1 ",
          "route_id": "1",
          "route_short_name": "1",
        },
      ],
      "routesById": Object {
        "1": Object {
          "label": "1 ",
          "route_id": "1",
          "route_short_name": "1",
        },
      },
      "stops": Array [
        Object {
          "stop_id": "1",
        },
      ],
      "stopsById": Object {
        "1": Object {
          "stop_id": "1",
        },
      },
    },
  ],
  "type": "set feeds",
}
`;
